# ArmoniK.Extensions.Cpp

./: .dockerignore  .gitignore  .readthedocs.yaml  BuildEnv.Dockerfile  CMakeLists.txt  CMakeSettings.json  Dockerfile.vs  Doxyfile  Packaging.cmake  README.md  Utils.cmake  build-client.sh  build-deploy-end2end.sh  buildSDK.Dockerfile  client.Dockerfile  compile-end2end-worker.sh  compile.sh  parameters.tfvars  restart-build-env.sh  setup-remote.sh
.docs/: app.config.ts  conf.py  customdoxygen.css  header.html  index.rst  nuxt.config.ts
.docs/_static/: custom.css
.docs/content/: 0.index.md  0.sdk.md  1.installation.md  2.tests.md  3.end2end.md
.docs/content/cpp/: index.rst
.docs/content/guide/: 0.index.md  1.installation.md  2.tests.md  3.end2end.md
.github/workflows/: build.yml  deploy-docs.yml  make-release.yml
ArmoniK.SDK.Client/: CMakeLists.txt  Config.cmake.in  Dockerfile
ArmoniK.SDK.Client.Test/: CMakeLists.txt  appsettings.json  main.cpp
ArmoniK.SDK.Client.Test/PythonTestWorker/: Dockerfile  worker.py
ArmoniK.SDK.Client.Test/include/: End2EndHandlers.h
ArmoniK.SDK.Client.Test/src/: ArmoniK.SDK.Client.Test.cpp  End2EndHandlers.cpp  SerializationTest.cpp  SessionHandlingTest.cpp  ThreadPoolTest.cpp  main.cpp
ArmoniK.SDK.Client/include/: IServiceInvocationHandler.h  SessionService.h  TaskRequest.h  WaitBehavior.h
ArmoniK.SDK.Client/include/armonik/sdk/client/: IServiceInvocationHandler.h  SessionService.h  WaitBehavior.h
ArmoniK.SDK.Client/private/: Batcher.h  ChannelPool.h  Function.h  SessionServiceImpl.h  ThreadPool.h
ArmoniK.SDK.Client/src/: ChannelPool.cpp  SessionService.cpp  SessionServiceImpl.cpp  ThreadPool.cpp
ArmoniK.SDK.Common/: CMakeLists.txt  Config.cmake.in  Version.h.in
ArmoniK.SDK.Common/include/: ArmoniKSDKException.h  ArmoniKSdkException.h  Configuration.h  Duration.h  IConfiguration.h  Properties.h  TaskOptions.h  TaskPayload.h  TaskRequest.h
ArmoniK.SDK.Common/include/armonik/sdk/common/: ArmoniKSdkException.h  BlobDefinition.h  Configuration.h  Duration.h  DynamicLibrary.h  Properties.h  TaskDefinition.h  TaskOptions.h  TaskPayload.h  Utils.h
ArmoniK.SDK.Common/include/armonik/sdk/common/internal/: ConventionPayload.h
ArmoniK.SDK.Common/src/: Configuration.cpp  DynamicLibrary.cpp  IConfiguration.cpp  Properties.cpp  TaskOptions.cpp  TaskPayload.cpp  TaskRequest.cpp
ArmoniK.SDK.DLLWorker/: CMakeLists.txt  Dockerfile  Ubuntu.Dockerfile  appsettings.json  build.sh  main.cpp
ArmoniK.SDK.DLLWorker/include/: ApplicationManager.h  ContextIds.h  DynamicLib.h  DynamicLibrary.h  DynamicWorker.h  SDKWorker.h  ServiceManager.h
ArmoniK.SDK.DLLWorker/src/: ApplicationManager.cpp  DynamicLib.cpp  DynamicLibrary.cpp  DynamicWorker.cpp  SDKWorker.cpp  SDKWorker.h  ServiceManager.cpp  main.cpp
ArmoniK.SDK.DLLWorker/workerlib/: ArmoniKSDKInterface.cpp  BaseService.cpp  BaseService.h  ComputeService.cpp  ComputeService.h
ArmoniK.SDK.DLLWorker/workerlib/include/: AdditionService.h  EchoService.h  ServiceBase.h
ArmoniK.SDK.DLLWorker/workerlib/src/: ArmoniKSDKInterface.cpp
ArmoniK.SDK.DynamicWorker/: CMakeLists.txt  Dockerfile  Ubuntu.Dockerfile  appsettings.json  build.sh  ubi7.Dockerfile  ubi8.Dockerfile
ArmoniK.SDK.DynamicWorker/include/: ApplicationManager.h  ContextIds.h  DynamicLib.h  DynamicWorker.h  ServiceManager.h
ArmoniK.SDK.DynamicWorker/src/: ApplicationManager.cpp  DynamicLib.cpp  DynamicWorker.cpp  ServiceManager.cpp  main.cpp
ArmoniK.SDK.Examples/hello/: Makefile  README.md
ArmoniK.SDK.Examples/hello/client/: CMakeLists.txt  Dockerfile  HelloServiceHandler.h  main.cpp
ArmoniK.SDK.Examples/hello/worker/: CMakeLists.txt  Dockerfile  HelloService.h
ArmoniK.SDK.Worker/: CMakeLists.txt  Config.cmake.in
ArmoniK.SDK.Worker.Test/: CMakeLists.txt  Dockerfile  Ubuntu.Dockerfile  install-dependencies.sh  main.cpp  ubi7.Dockerfile
ArmoniK.SDK.Worker.Test/include/: AdditionService.h  ConventionService.h  EchoService.h  ExceptionService.h  SegFaultService.h  SleepService.h  StressTest.h
ArmoniK.SDK.Worker.Test/src/: ArmoniKSDKInterface.cpp  ServiceDispatch.cpp
ArmoniK.SDK.Worker/include/: ApplicationManager.h  ArmoniKSDKInterface.h  BaseService.h  ComputeService.h  ContextIds.h  InterfaceDLL.h  ServiceBase.h  ServiceManager.h
ArmoniK.SDK.Worker/include/armonik/sdk/worker/: ArmoniKSDKInterface.h  ServiceBase.h
ArmoniK.SDK.Worker/src/: ApplicationManager.cpp  ArmoniKSDKInterface.cpp  BaseService.cpp  ComputeService.cpp  InterfaceDLL.cpp  ServiceBase.cpp  ServiceManager.cpp
tools/: BuildEnv.Dockerfile  Dockerfile.vs  Doxyfile  build-client.sh  build-deploy-end2end.sh  build-dynamic-worker.sh  buildSDK.Dockerfile  common.sh  make-targz.sh  parameters.tfvars  restart-build-env.sh  setup-remote.sh  ubi-package.Dockerfile
tools/packaging/: deb.Dockerfile  make-deb.sh  make-rpm.sh  make-tar.gz.sh  ubi-rpm.Dockerfile  ubi-tgz.Dockerfile  ubi8-rpm.Dockerfile  ubi8.Dockerfile
tools/packaging/common/: DESCRIPTION  LICENSE
tools/packaging/debian/: control  rules
