cmake_minimum_required(VERSION 3.22)
set(PROJECT_NAME ArmoniK.SDK.DLLWorker)
set(NAMESPACE ArmoniK::SDK::DLLWorker)
set(version 0.1.0)

project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 17)

SET(SOURCES_FILES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
SET(HEADER_FILES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

FILE(GLOB_RECURSE SRC_DLLWORKER_FILES ${SOURCES_FILES_DIR}/*.cpp)
FILE(GLOB_RECURSE HEADER_DLLWORKER_FILES ${HEADER_FILES_DIR}/*.h)

# TODO Move out of here
SET(WORKER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/workerlib")
SET(WORKER_SOURCE_DIR "${WORKER_FILES}/src")
SET(WORKER_HEADER_DIR "${WORKER_FILES}/include")
FILE(GLOB_RECURSE SRC_WORKER_FILES ${WORKER_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE HEADER_WORKER_FILES ${WORKER_HEADER_DIR}/*.h)

find_package(ArmoniK.SDK.Worker CONFIG REQUIRED)

add_executable(${PROJECT_NAME} ${SRC_DLLWORKER_FILES} ${HEADER_DLLWORKER_FILES} ${SRC_WORKER_FILES} ${HEADER_WORKER_FILES})

target_link_libraries(${PROJECT_NAME} PRIVATE ArmoniK.SDK.Worker)

target_compile_definitions(${PROJECT_NAME} PUBLIC SDK_DLLWORKER_NAMESPACE=${NAMESPACE})

target_include_directories(${PROJECT_NAME}
        PUBLIC
        "$<BUILD_INTERFACE:${HEADER_FILES_DIR}>"
        "$<BUILD_INTERFACE:${WORKER_HEADER_DIR}>"
        )