cmake_minimum_required(VERSION 3.22)
set(PROJECT_NAME ArmoniK.SDK.DLLWorker)
set(NAMESPACE ArmoniK::Sdk::DLLWorker)
set(version 0.1.0)

project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 17)

SET(SOURCES_FILES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
SET(HEADER_FILES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

FILE(GLOB_RECURSE SRC_DLLWORKER_FILES ${SOURCES_FILES_DIR}/*.cpp)
FILE(GLOB_RECURSE HEADER_DLLWORKER_FILES ${HEADER_FILES_DIR}/*.h)

find_package(ArmoniK.SDK.Common REQUIRED CONFIG)
find_package(ArmoniK.Api.Worker REQUIRED CONFIG)

find_file(ARMONIK_SDK_HEADER ArmoniKSDKInterface.h PATHS /app/install PATH_SUFFIXES armonik/sdk/worker include/armonik/sdk/worker REQUIRED NO_CACHE)
message(STATUS "Found ArmonikSDKInterface.h at location ${ARMONIK_SDK_HEADER}")
get_filename_component(ARMONIK_SDK_HEADER_DIR ${ARMONIK_SDK_HEADER} DIRECTORY)

add_executable(${PROJECT_NAME} ${SRC_DLLWORKER_FILES} ${HEADER_DLLWORKER_FILES})

target_compile_definitions(${PROJECT_NAME} PUBLIC SDK_DLLWORKER_NAMESPACE=${NAMESPACE})
setup_options(${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME} PRIVATE ArmoniK.SDK.Common ArmoniK.Api.Worker ArmoniK.Api.Common)

target_include_directories(${PROJECT_NAME}
        PUBLIC
        "$<BUILD_INTERFACE:${HEADER_FILES_DIR}>"
        "$<BUILD_INTERFACE:${ARMONIK_SDK_HEADER_DIR}>"
        )

add_custom_command(
        TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy
        ${CMAKE_CURRENT_SOURCE_DIR}/appsettings.json
        ${CMAKE_CURRENT_BINARY_DIR}/appsettings.json)

set_property(TARGET ${PROJECT_NAME} PROPERTY VERSION ${VERSION})
set_property(TARGET ${PROJECT_NAME} PROPERTY SOVERSION 0)
set_property(TARGET ${PROJECT_NAME} PROPERTY INTERFACE_${PROJECT_NAME}_MAJOR_VERSION 0)
set_property(TARGET ${PROJECT_NAME} APPEND PROPERTY COMPATIBLE_INTERFACE_STRING ${PROJECT_NAME}_MAJOR_VERSION)

install(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_BINDIR})
